tests/compile/derive-invalid-strategy.stderr
error[E0308]: mismatched types
 --> tests/compile/derive-invalid-strategy.rs:5:24
  |
5 |       #[merge(strategy = my_custom_merge_strategy)]
  |                          ^-----------------------
  |                          |
  |  ________________________arguments to this function are incorrect
  | |
6 | |     field1: u8,
  | |__________^ expected `u8`, found `&mut u8`
  |
note: function defined here
 --> tests/compile/derive-invalid-strategy.rs:9:4
  |
9 | fn my_custom_merge_strategy(left: u8, right: u8) -> u8 {
  |    ^^^^^^^^^^^^^^^^^^^^^^^^ --------
help: consider removing the borrow
  |
5 |     #[merge(strategy = my_custom_merge_strategy)]
  |
